1.89

Screen refresh fix for slots screen when sync results in download.

1.88

Fix proficiency reporting on session completion report.

1.87

Font size adjustments.
Provide new "proficiency" indicator.
Adjust scoring to prevent unrealistic high scores.
Remove "card lockout threshold", it only seems to cause issues by hiding cards that should be repeated unoften.

1.86

Update to RoboVM 1.6.0
Update to libGDX 1.6.5


1.85

Fix bug introduced in last update with scheduling.

1.84

if learning box == 0 tries per card is 4
if learning box == 1 tries per card is 3
if learning box == 2 tries per card is 2
if learning box  > 2 tries per card is 1

Remove settable options for time limits and session lengths because of new learning box logic.

1.83

Reduce number of times a refresh challenge is shown based on knowledge rating of item to reduce time reviewing well known material.
Fix infinite loop bug caused when no more remaining initial cards and time remaining on clock.
Update to libGDX 1.6.4, RoboVM 1.5.0.
Fix login loop issues with Google Play.

1.81

Update to libGDx 1.6.2, Disable RoboVM Tree Shaker

1.80

Fix incorrectly sized "hisgi" icon

1.79

libGDX 1.6.1. Reset card at "box level 0" that have errors for reintroduction as new cards.

1.78

libGDX 1.6.0

1.77

libGDX 1.56. Various fixes related to Google Play Services. Enforce centering of titles on dialogs. Upgraded to RoboVM 1.10.

1.76

Import Levenstein routing from Apache StringUtils and fix to use static arrays in a synchronized static function to stop serious GC issues for Android/iOS.
Greatly reduce "delayed challenge display" caused by getAnswerSetsFor taking too long to run because of triggered System.gc caused by levenstein stuff.
Added brief delay of challenge card if a touch down is detected at "show" time.
Added brief disablement of 'check' button to try and reduce 'click-through'.
Add "Confirm Quit Session" when "Main Menu" hit on learning screen.
UI adjustments for "Challenge Cards".